fix: spacing missing from responsive

--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -16,7 +16,8 @@
 }
 
 .container {
-  max-width: 960px;
+  max-width: 1008px;
+  padding: 0 var(--space-md-lg);
   margin: auto;
   display: grid;
   grid-template-columns: 1fr;
