--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -26,6 +26,7 @@
   --space-xs: 4px;
   --space-sm: 8px;
   --space-md: 16px;
+  --space-md-lg: 24px;
   --space-lg: 32px;
   --space-xl: 64px;
 
